--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "18.16.3",
+    "typescript": "5.0.4"
   }
 }
