--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
-    "@types/node": "18.16.3",
-    "typescript": "5.0.4"
+    "@types/node": "^18.16.3",
+    "typescript": "^5.0.4"
   }
 }
